# peac

./: .bumpversion.cfg  .gitignore  BUILD.md  BUMPVERSION.md  CHANGELOG.md  Dockerfile  Makefile  README.md  REPRODUCIBILITY.md  dev_runner.py  docker-compose.yml  pyproject.toml  template.yaml  test_rag_gpu.py  test_rag_gui.yaml  test_rag_integration.py  test_rag_text_cleaning.py  untitled_1.yaml
.github/: copilot-instructions.md
.github/workflows/: build-release-linux-lite.yml  build-release-linux.yml  build-release-macos-lite.yml  build-release-macos.yml  build-release-windows-lite.yml  build-release-windows-stub.yml  build-release.yml
assets/: README.md
build_scripts/: README.md  build.bat  build.sh  build_auto.sh  build_linux.sh  build_linux_simple.sh  build_macos.sh  build_macos_simple.sh  build_windows.bat  build_windows_lite.bat
docs/: .$modules.drawio.bkp  .$modules.drawio.dtmp  BUILD_RELEASE_GUIDE.md  BUILD_VARIANTS.md  FAST_STARTUP_BUILD.md  IMPLEMENTATION_SUMMARY.md  MANUSCRIPT_TEXT.md  RAG_PROVIDERS.md  README_diagrams.md  TROUBLESHOOTING_PYINSTALLER.md  figure_modules_latex.tex  main.tex  modules copy.puml  modules.drawio  modules.puml  modules.yaml  modules_new.drawio  peac-ebnf-grammar.ebnf  peac_integration_latex.tex  peac_integration_sequence copy.puml  peac_integration_sequence.puml  sequence_diagram_peac_usecase.puml
esempi/: fowler.txt
evaluation/: 1-java.md
examples/: RAG_EXAMPLES.md  academic-latex.yaml  academic.yaml  cfp.yaml  comprehensive-analysis.yaml  ieee-orig.txt  ieee.txt  java-base-maven.yaml  java-hybernate.yaml  java-servlets.yaml  phrases.json  rag-faiss.yaml  rag-fastembed.yaml  rag-sample-docs.yaml  rag-simple.yaml  replicate-valuable-context.txt  replicate-valuable-prompt.txt  replicate-valuable-prompt.yaml  write-readme.yaml
examples/comprehensive-example/: README.md
examples/comprehensive-example/code-examples/: config_parser.py  prompt_engineering.py
examples/comprehensive-example/docs/: cli-design-guidelines.md  python-architecture-patterns.md  yaml-configuration-practices.md
examples/comprehensive-example/output-examples/: code-review-example.md  technical-analysis-example.md
examples/demo-healthcare/: docker.yaml  infrastructure.yaml  main.yaml  networking.yaml  patient.json  sw-dashboard-app.yaml  sw-dashboard-language.yaml  sw-iot-device-language-golang.yaml  sw-iot-device-language.yaml  sw-iot-device.yaml  use-case-info.yaml
examples/examples/comprehensive-example/: analysis_examples.faiss  analysis_examples_metadata.json  codebase_examples.faiss  codebase_examples_metadata.json  python_patterns.faiss  python_patterns_metadata.json
examples/indexes/: sample_docs.json
examples/indexes/faiss_docs/: index.faiss  metadata.pkl
examples/nutrition/: nutrition-base.yaml  nutrition-diabetes.yaml  nutrition-women.yaml  patient-specific.yaml
examples/nutrition/nutrition/: condition-pack.yaml  instruction-pack.yaml  leaf-1.yaml  leaf-swap.yaml  output-pack.yaml  paradigm-pack.yaml  preference-pack.yaml
examples/prompt-engineering/: QUICK_REFERENCE.md  README.md  chain-of-thought-prompting.yaml  contextual-prompting.yaml  dynamic-prompting.yaml  few-shot-prompting.yaml  google-ask-for-info.yaml  google-delimiters.yaml  google-persona-assignment.yaml  google-prompt-chaining.yaml  google-task-decomposition.yaml  multi-strategy-combination.yaml  reasoning-acting-prompting.yaml  zero-shot-prompting.yaml
examples/prompt-engineering/context-examples/: company-info.txt  industry-trends.txt
examples/sample-docs/: api_design.md  architecture_patterns.md  data_processor.py  database_design.txt  python_best_practices.md
examples/usecase/: Guida.docx  Guida_Nutrizionista_Moduli_PEaC.md  LEGGI_PRIMA.md  MODULO_RACCOLTA_DATI.md  Procedura_Esperimento_Completa.md  README_ESPERIMENTO.md  esempio.yaml  nutrizione-allergie.yaml  nutrizione-base.yaml  nutrizione-diabete.yaml  nutrizione-pcos.yaml  nutrizione-sport.yaml  nutrizione-vegetariana.yaml  nutrizione-weight-loss.yaml  provaragyaml.yaml  template.docx  template.txt  test-hierarchical-extends.yaml
examples/usecase/Diete/: CHANGELOG.md  (+14 more)
llm_as_code/: main.py
peac/: gui_launcher.py  local_parser.py  main.py  template.yaml
peac/core/: peac.py
peac/gui/: PeacApp.py  __init__.py  main_app copy.py  main_app.py  peac.kv
peac/gui_ctk/: main_app.py
peac/providers/: base.py  docx.py  pdf.py  rag.py  xlsx.py
scripts/: run_benchmarks.py  start-g4f.sh  test_benchmark_quick.py
tests/: academic.yaml  context_example.txt  dev-add.yaml  dev-folder-python.yaml  dev-folder-recursive-regex.yaml  dev-folder-recursive.yaml  dev-input.yaml  input_text.txt  java-servlets.yaml  output_example.txt  test_extends_cross_platform.py  test_hierarchical_extends.py  test_local_rules_validation.py  test_main.py  test_nutrizione_files.py  test_path_cross_platform.py  test_path_resolver.py  test_peac_core.py  test_performance.py  test_rag.py  web.yaml
tests/benchmark_corpus/: doc_0001.md  doc_0002.md  doc_0003.md  doc_0004.md  doc_0005.md  doc_0006.md  doc_0007.md  doc_0008.md  doc_0009.md  doc_0010.md  doc_0011.md  doc_0012.md  doc_0013.md  doc_0014.md  doc_0015.md  doc_0016.md  doc_0017.md  doc_0018.md  doc_0019.md  doc_0020.md  doc_0021.md  doc_0022.md  doc_0023.md  doc_0024.md  doc_0025.md  doc_0026.md  doc_0027.md  doc_0028.md  doc_0029.md  doc_0030.md  doc_0031.md  doc_0032.md  doc_0033.md  doc_0034.md  doc_0035.md  doc_0036.md  doc_0037.md  doc_0038.md  doc_0039.md  doc_0040.md  (+60 more)
tests/test-folder/: example.txt  test.py
tests/utils/: generate_synthetic_corpus.py
(+67 files in other folders)
